1.20.1 integration: merge c1/c7/c6/c3/c4/c5, fix residual container/grindstone compile errors
- LivingEntityAttributesMixin moved to the Fabric-only mixin config (Forge attaches via EntityAttributeModificationEvent)
- access widener: loot lines dropped (accessor mixins cover them)
- SpellContainerSource/SpellAssignments/GrindstoneSlotOutputMixin: Identifier.of -> new Identifier, RegistryKey-based getEntry, no SequencedCollection